# Ai_Meeting_Minutes

./: EarningsCall.json  EarningsCall.srt  EarningsCall.tsv  EarningsCall.txt  EarningsCall.vtt  README.md  pyproject.toml
meeting_minutes/: action_items.txt  meeting_minutes.md  sentiment.txt  summary.txt
src/ai_meeting_minutes/: main.py
src/ai_meeting_minutes/crews/meeting_minutes_crew/: meeting_minutes_crew.py
src/ai_meeting_minutes/crews/meeting_minutes_crew/config/: agents.yaml  tasks.yaml
