[project]
name = "ai_meeting_minutes"
version = "0.1.0"
description = "ai-meeting-minutes using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
]

[project.scripts]
kickoff = "ai_meeting_minutes.main:kickoff"
run_crew = "ai_meeting_minutes.main:kickoff"
plot = "ai_meeting_minutes.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
